# simple_menu

./: CMakeLists.txt  Readme.md  main  main.c  readme.md  simple_menu.c
src/cliente/: cliente.c  cliente.h
src/produto/: produto.c  produto.h
src/venda/: venda.c  venda.h
